--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/PizzabrosaV1.0.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang3-3.7-bin.zip=C:\\Users\\Zelph\\Downloads\\commons-lang3-3.7-bin.zip
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-lang3-3.7-bin.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
